Queue: Added index/create api end-points for queue & job. Added specs and updated swagger docs.
