# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2021_05_25_174141) do
+ActiveRecord::Schema.define(version: 2021_11_13_124542) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
@@ -43,6 +43,25 @@ ActiveRecord::Schema.define(version: 2021_05_25_174141) do
     t.index ["blob_id", "variation_digest"], name: "index_active_storage_variant_records_uniqueness", unique: true
   end
 
+  create_table "job_queues", force: :cascade do |t|
+    t.string "name", limit: 255, null: false
+    t.integer "priority", default: 0, null: false
+    t.integer "jobs_count"
+    t.datetime "created_at", precision: 6, null: false
+    t.datetime "updated_at", precision: 6, null: false
+  end
+
+  create_table "jobs", force: :cascade do |t|
+    t.string "name", limit: 255, null: false
+    t.integer "status", default: 0, null: false
+    t.integer "priority", default: 0, null: false
+    t.jsonb "meta", default: {}, null: false
+    t.bigint "job_queue_id", null: false
+    t.datetime "created_at", precision: 6, null: false
+    t.datetime "updated_at", precision: 6, null: false
+    t.index ["job_queue_id"], name: "index_jobs_on_job_queue_id"
+  end
+
   create_table "members", force: :cascade do |t|
     t.string "email"
     t.string "first_name"
@@ -70,4 +89,5 @@ ActiveRecord::Schema.define(version: 2021_05_25_174141) do
 
   add_foreign_key "active_storage_attachments", "active_storage_blobs", column: "blob_id"
   add_foreign_key "active_storage_variant_records", "active_storage_blobs", column: "blob_id"
+  add_foreign_key "jobs", "job_queues"
 end
